--- a/views/layouts.ejs
+++ b/views/layouts.ejs
@@ -9,6 +9,25 @@
 </head>
 
 <body>
+    <ul id="nav">
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/cakepop">Menu</a>
+        </li>
+        <li>
+            <a href="/cakepop/order">Cart</a>
+        </li>
+        <li>
+            <a href="/login">Login</a>
+        </li>
+        <li>
+            <a href="/logout">Logout</a>
+        </li>
+    </ul>
+
+    <%- body %>
     
 </body>
 </html>
