--- a/views/cakepop/index.ejs
+++ b/views/cakepop/index.ejs
@@ -1,11 +1,15 @@
 <% cakepops.forEach( cakepop => { %>
-<h1>
+<h2>
     <%= cakepop.name %>
-</h1>
+</h2>
  <p>
     <%= cakepop.description %>
  </p>
- <button id="<%= cakepop._id %>" class="addToCartBtn">Add To Cart</button>
+ <p>
+    <%= cakepop.price  %>
+ </p>
+ <img src="<%= cakepop.image %>" alt="<%= cakepop.name %>">
+ <button id="<%= cakepop.id %>" class="addToCartBtn">Add To Cart</button>
 <% }) %>
 
 <div>
