--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -19,7 +19,9 @@
 
     <div class="actions">
         <button class="editBtn">Edit</button>
-        <button class="deleteBtn">Delete</button>
+        <form action="/cakepop/<%= order._id %>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete"/>
+           </form>
     </div>
 
 </div>  
