--- a/views/cakepop/index.ejs
+++ b/views/cakepop/index.ejs
@@ -10,6 +10,7 @@
  </p>
  <img src="<%= cakepop.image %>" alt="<%= cakepop.name %>">
  <button id="<%= cakepop._id %>" class="addToCartBtn">Add To Cart</button>
+ <button id="<%= cakepop._id %>" class="packBtn" cakepop.price="9">Add Pack of 5</button>
 <% }) %>
 
 <div>
