--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -18,7 +18,12 @@
     <% }) %>
 
     <div class="actions">
-        <button class="editBtn">Edit</button>
+        <div>
+            <form action="/cakepop/<%= order._id %>?_method=PUT" method="POST">
+               
+                <input type="submit" value="Edit"/>
+            </form>
+        </div>
         <form action="/cakepop/<%= order._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete"/>
            </form>
