--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -18,15 +18,16 @@
     <% }) %>
 
     <div class="actions">
-        <div>
-            <form action="/cakepop/<%= order._id %>?_method=PUT" method="POST">
+        <!-- <div>
+            <form action="/cakepop/?_method=PUT" method="POST">
                
                 <input type="submit" value="Edit"/>
-            </form>
+            </form> -->
         </div>
         <form action="/cakepop/<%= order._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete"/>
            </form>
+           
     </div>
 
 </div>  
